--- a/sling-stanbol-servlet/pom.xml
+++ b/sling-stanbol-servlet/pom.xml
@@ -97,5 +97,10 @@
 			<artifactId>rdf.core</artifactId>
 			<version>0.12-incubating-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.clerezza</groupId>
+			<artifactId>rdf.utils</artifactId>
+			<version>0.13-incubating-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
