--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
   <modules>
 	<module>sling-stanbol-servlet</module>
 	<module>sling-stanbol-fragment</module>
-	<module>sling-stanbol-launchpad</module>  
+	<module>sling-stanbol-launcher</module>  
   </modules>
 
 
