Added jcr-observer module to project (not yet to launcher)

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 
   <modules>
 	<module>sling-stanbol-servlet</module>
+	<module>sling-stanbol-jcr-observer</module>
 	<module>sling-stanbol-fragment</module>
 	<module>sling-stanbol-launcher</module>  
   </modules>
