Added meta-data viewer page (.meta), fixed threaded event handling bug, cleaned code.

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 	<module>sling-stanbol-servlet</module>
 	<module>sling-stanbol-jcr-observer</module>
 	<module>sling-stanbol-fragment</module>
+	<module>sling-stanbol-commons</module>
 	<module>sling-stanbol-launcher</module>  
   </modules>
 
