--- a/sling-stanbol-jcr-observer/pom.xml
+++ b/sling-stanbol-jcr-observer/pom.xml
@@ -102,5 +102,10 @@
 			<artifactId>rdf.utils</artifactId>
 			<version>0.13-incubating-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.wymiwyg.sling-stanbol</groupId>
+			<artifactId>sling-stanbol-commons</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
