--- a/sling-stanbol-servlet/pom.xml
+++ b/sling-stanbol-servlet/pom.xml
@@ -17,7 +17,8 @@
     specific language governing permissions and limitations
     under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -37,22 +38,56 @@
 	</description>
 
 	<build>
+		<resources>
+			<resource>
+	        	<directory>src/main/resources</directory>
+			</resource>
+			<resource>
+	        	<directory>${project.build.directory}/generated-resources</directory>
+			</resource>
+		</resources>
 		<plugins>
-          
-            <!-- Generation of SCR descriptors -->
+
+			<!-- Generation of SCR descriptors -->
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-scr-plugin</artifactId>
 			</plugin>
-            <!-- Bundling the sample project -->
+			<!-- Bundling the sample project -->
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Sling-Initial-Content>initial-content</Sling-Initial-Content>
+					</instructions>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-scm-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+				<execution>
+					<id>perform-checkout</id>
+					<configuration>
+						<connectionUrl>scm:git:git://github.com/IKS/VIE.git</connectionUrl>
+						<checkoutDirectory>${project.build.directory}/generated-resources/initial-content/apps/vie</checkoutDirectory>
+						<scmVersionType>branch</scmVersionType>
+						<scmVersion>wymeditor</scmVersion>
+						<!-- <excludes>.git/*</excludes> -->
+					</configuration>
+					<phase>generate-resources</phase>
+					<goals>
+						<goal>checkout</goal>
+					</goals>
+				</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
-  
+
 
 	<dependencies>
 		<dependency>
