--- a/sling-stanbol-fragment/pom.xml
+++ b/sling-stanbol-fragment/pom.xml
@@ -21,11 +21,10 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.apache.sling</groupId>
-        <artifactId>sling</artifactId>
-        <version>11</version>
-        <relativePath>../../../parent/pom.xml</relativePath>
-    </parent>
+		<groupId>org.wymiwyg.sling-stanbol</groupId>
+		<artifactId>sling-stanbol</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 	<groupId>org.wymiwyg.sling-stanbol</groupId>
     <artifactId>sling-stanbol-fragment</artifactId>
     <version>1.0-SNAPSHOT</version>
