--- a/sling-stanbol-jcr-observer/pom.xml
+++ b/sling-stanbol-jcr-observer/pom.xml
@@ -21,9 +21,9 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.apache.sling</groupId>
-		<artifactId>sling</artifactId>
-		<version>12-SNAPSHOT</version>
+		<groupId>org.wymiwyg.sling-stanbol</groupId>
+		<artifactId>sling-stanbol</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.wymiwyg.sling-stanbol</groupId>
