--- a/sling-stanbol-ui/pom.xml
+++ b/sling-stanbol-ui/pom.xml
@@ -22,9 +22,9 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.apache.sling</groupId>
-		<artifactId>sling</artifactId>
-		<version>12-SNAPSHOT</version>
+		<groupId>org.wymiwyg.sling-stanbol</groupId>
+		<artifactId>sling-stanbol</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.wymiwyg.sling-stanbol</groupId>
@@ -32,7 +32,7 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
-	<name>Apache Sling stanbol Servlet</name>
+	<name>Apache Sling stanbol web interface</name>
 	<description>
         A servlet accessing stanbol enhancer
 	</description>
@@ -83,18 +83,7 @@
 					</execution>
 				</executions>
 			</plugin> -->
-			<plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>animal-sniffer-maven-plugin</artifactId>
-                    <version>1.7</version>
-                    <configuration>
-                        <signature>
-                            <groupId>org.codehaus.mojo.signature</groupId>
-                            <artifactId>java16</artifactId>
-                            <version>1.0</version>
-                        </signature>
-                    </configuration>
-                </plugin>
+			
 
 			<plugin>
 				<artifactId>maven-remote-resources-plugin</artifactId>
