--- a/sling-stanbol-launcher/pom.xml
+++ b/sling-stanbol-launcher/pom.xml
@@ -21,6 +21,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.apache.stanbol</groupId>
+    <artifactId>stanbol-parent</artifactId>
+    <version>0.9.0-incubating-SNAPSHOT</version>
+		<!-- <groupId>org.wymiwyg.sling-stanbol</groupId>
+		<artifactId>sling-stanbol</artifactId>
+		<version>1.0-SNAPSHOT</version> -->
+	</parent>
 	<groupId>org.wymiwyg.sling-stanbol</groupId>
 	<artifactId>sling-stanbol-launcher</artifactId>
 	<packaging>jar</packaging>
@@ -34,7 +42,7 @@
 			<plugin>
 				<groupId>org.apache.sling</groupId>
 				<artifactId>maven-launchpad-plugin</artifactId>
-				<version>2.0.10</version>
+				<version>2.1.0</version>
 				<executions>
 					<execution>
 						<id>prepare-package</id>
@@ -71,13 +79,63 @@
 		</plugins>
 	</build>
 	<dependencies>
+
 		<dependency>
-			<!-- maven-launchpad-plugin builds on the launchpad.base app -->
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.launchpad.base</artifactId>
-			<version>2.3.0</version>
 			<classifier>app</classifier>
+			<version>2.3.0</version>
 		</dependency>
+
+		<!-- Stanbol CMS Adapter Bundle List -->
+		<dependency>
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>org.apache.stanbol.cmsadapter.bundlelist</artifactId>
+			<type>partialbundlelist</type>
+		</dependency>
+
+		<!-- Stanbol Contenthub Bundle List -->
+		<dependency>
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>org.apache.stanbol.contenthub.bundlelist</artifactId>
+			<type>partialbundlelist</type>
+		</dependency>
+
+		<!-- Stanbol Data Bundle List -->
+		<dependency>
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>org.apache.stanbol.data.bundlelist</artifactId>
+			<type>partialbundlelist</type>
+		</dependency>
+
+		<!-- Stanbol Enhancer Bundle List -->
+		<dependency>
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>org.apache.stanbol.enhancer.bundlelist</artifactId>
+			<type>partialbundlelist</type>
+		</dependency>
+
+		<!-- Stanbol Entityhub Bundle List -->
+		<dependency>
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>org.apache.stanbol.entityhub.bundlelist</artifactId>
+			<type>partialbundlelist</type>
+		</dependency>
+
+		<!-- Stanbol Ontology Manager Bundle List -->
+		<dependency>
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>org.apache.stanbol.ontologymanager.bundlelist</artifactId>
+			<type>partialbundlelist</type>
+		</dependency>
+
+		<!-- Stanbol Rules Bundle List -->
+		<dependency>
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>org.apache.stanbol.rules.bundlelist</artifactId>
+			<type>partialbundlelist</type>
+		</dependency>
+
 	</dependencies>
 </project>
 
