--- a/sling-stanbol-ui/pom.xml
+++ b/sling-stanbol-ui/pom.xml
@@ -64,25 +64,19 @@
 					</instructions>
 				</configuration>
 			</plugin>
-			<!-- <plugin>
-				<artifactId>maven-remote-resources-plugin</artifactId>
-				<version>1.2.1</version>
-				<executions>
-					<execution>
-						<id>process-remote-resources</id>
-						<goals>
-							<goal>process</goal>
-						</goals>
-						<configuration>
-							<resourceBundles>
-								<resourceBundle>eu.iks-project:annotate.js:1.0-SNAPSHOT</resourceBundle>
-							</resourceBundles>
-							<outputDirectory>${project.build.directory}/maven-shared-archive-resources/initial-content/apps/annotate.js/</outputDirectory>
-							<attached>false</attached>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin> -->
+			<plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+				<configuration>
+                    <instructions>
+                        <Embed-Transitive>true</Embed-Transitive>
+                        <Embed-Dependency>
+                            tagsoup
+                        </Embed-Dependency>
+                    </instructions>
+                </configuration>
+            </plugin>
 			
 
 			<plugin>
@@ -109,6 +103,11 @@
 
 
 	<dependencies>
+		<dependency>
+		    <groupId>org.ccil.cowan.tagsoup</groupId>
+		    <artifactId>tagsoup</artifactId>
+		    <version>1.2.1</version>
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
