--- a/sling-stanbol-jcr-observer/pom.xml
+++ b/sling-stanbol-jcr-observer/pom.xml
@@ -92,6 +92,16 @@
 			<artifactId>org.apache.stanbol.enhancer.servicesapi</artifactId>
 			<version>0.9.0-incubating-SNAPSHOT</version>
 		</dependency>
+        <dependency>
+          <groupId>org.apache.stanbol</groupId>
+          <artifactId>org.apache.stanbol.cmsadapter.servicesapi</artifactId>
+          <version>0.9.0-incubating-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.stanbol</groupId>
+          <artifactId>org.apache.stanbol.cmsadapter.core</artifactId>
+          <version>0.9.0-incubating-SNAPSHOT</version>
+        </dependency>
 		<dependency>
 			<groupId>org.apache.clerezza</groupId>
 			<artifactId>rdf.core</artifactId>
