--- a/sling-stanbol-launcher/pom.xml
+++ b/sling-stanbol-launcher/pom.xml
@@ -101,59 +101,98 @@
 	<dependencies>
 
 		<dependency>
+			<!-- maven-launchpad-plugin builds on the launchpad.base app -->
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.launchpad.base</artifactId>
 			<classifier>app</classifier>
-			<version>2.3.0</version>
 		</dependency>
-
+	
+		<!-- OSGi Framemework Bundle List -->
+		<dependency>
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>org.apache.stanbol.launchers.bundlelists.osgiframework</artifactId>
+			<type>partialbundlelist</type>
+			<scope>provided</scope>
+		</dependency>
+	
+		<!-- Stanbol Commons Bundle List -->
+		<dependency>
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>org.apache.stanbol.launchers.bundlelists.stanbolcommons</artifactId>
+			<type>partialbundlelist</type>
+			<scope>provided</scope>
+		</dependency>
+	
 		<!-- Stanbol CMS Adapter Bundle List -->
 		<dependency>
 			<groupId>org.apache.stanbol</groupId>
 			<artifactId>org.apache.stanbol.cmsadapter.bundlelist</artifactId>
 			<type>partialbundlelist</type>
+			<scope>provided</scope>
 		</dependency>
-
+	
 		<!-- Stanbol Contenthub Bundle List -->
 		<dependency>
 			<groupId>org.apache.stanbol</groupId>
 			<artifactId>org.apache.stanbol.contenthub.bundlelist</artifactId>
 			<type>partialbundlelist</type>
+			<scope>provided</scope>
 		</dependency>
-
+	
 		<!-- Stanbol Data Bundle List -->
 		<dependency>
 			<groupId>org.apache.stanbol</groupId>
 			<artifactId>org.apache.stanbol.data.bundlelist</artifactId>
 			<type>partialbundlelist</type>
+			<scope>provided</scope>
 		</dependency>
-
+	
 		<!-- Stanbol Enhancer Bundle List -->
 		<dependency>
 			<groupId>org.apache.stanbol</groupId>
 			<artifactId>org.apache.stanbol.enhancer.bundlelist</artifactId>
 			<type>partialbundlelist</type>
+			<scope>provided</scope>
 		</dependency>
-
+	
 		<!-- Stanbol Entityhub Bundle List -->
 		<dependency>
 			<groupId>org.apache.stanbol</groupId>
 			<artifactId>org.apache.stanbol.entityhub.bundlelist</artifactId>
 			<type>partialbundlelist</type>
+			<scope>provided</scope>
 		</dependency>
-
+	
+		<!-- Stanbol FactStore Bundle List -->
+		<dependency>
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>org.apache.stanbol.factstore.bundlelist</artifactId>
+			<type>partialbundlelist</type>
+			<scope>provided</scope>
+		</dependency>
+	
 		<!-- Stanbol Ontology Manager Bundle List -->
 		<dependency>
 			<groupId>org.apache.stanbol</groupId>
 			<artifactId>org.apache.stanbol.ontologymanager.bundlelist</artifactId>
 			<type>partialbundlelist</type>
+			<scope>provided</scope>
 		</dependency>
-
+	
 		<!-- Stanbol Rules Bundle List -->
 		<dependency>
 			<groupId>org.apache.stanbol</groupId>
 			<artifactId>org.apache.stanbol.rules.bundlelist</artifactId>
 			<type>partialbundlelist</type>
+			<scope>provided</scope>
+		</dependency>
+	
+		<!-- Stanbol Reasoners Bundle List -->
+		<dependency>
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>org.apache.stanbol.reasoners.bundlelist</artifactId>
+			<type>partialbundlelist</type>
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
