--- a/sling-stanbol-launcher/pom.xml
+++ b/sling-stanbol-launcher/pom.xml
@@ -37,6 +37,9 @@
 	<description>
         The Launchpad. Available in both JAR and WAR flavors.
     </description>
+    <prerequisites>
+		<maven>3.0.2</maven>
+	</prerequisites>
 	<build>
 		<plugins>
         <plugin>
@@ -84,7 +87,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.4</version>
 				<configuration>
 					<archive>
 						<manifest>
@@ -142,7 +145,13 @@
 		<!-- Stanbol Data Bundle List -->
 		<dependency>
 			<groupId>org.apache.stanbol</groupId>
-			<artifactId>org.apache.stanbol.data.bundlelist</artifactId>
+			<artifactId>org.apache.stanbol.data.bundlelists.defaultdata</artifactId>
+			<type>partialbundlelist</type>
+			<scope>provided</scope>
+		</dependency>
+		<dependency> <!-- include all OpenNLP models in the full launcher -->
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>org.apache.stanbol.data.bundlelists.opennlp</artifactId>
 			<type>partialbundlelist</type>
 			<scope>provided</scope>
 		</dependency>
