--- a/sling-stanbol-commons/pom.xml
+++ b/sling-stanbol-commons/pom.xml
@@ -54,7 +54,12 @@
 		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.jcr.resource</artifactId>
-			<version>2.0.6</version>
+			<version>2.0.10</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.jcr</groupId>
+			<artifactId>jcr</artifactId>
+			<type>jar</type>
 		</dependency>
 	</dependencies>
 </project>
