--- a/sling-stanbol-jcr-observer/pom.xml
+++ b/sling-stanbol-jcr-observer/pom.xml
@@ -62,17 +62,17 @@
 		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.api</artifactId>
-			<version>2.0.8</version>
+			<version>2.2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.jcr.resource</artifactId>
-			<version>2.0.6</version>
+			<version>2.0.10</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.engine</artifactId>
-			<version>2.0.6</version>
+			<version>2.2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -116,6 +116,15 @@
 			<groupId>org.wymiwyg.sling-stanbol</groupId>
 			<artifactId>sling-stanbol-commons</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.jcr</groupId>
+			<artifactId>jcr</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.sling</groupId>
+			<artifactId>org.apache.sling.jcr.api</artifactId>
+			<version>2.1.0</version>
 		</dependency>
 	</dependencies>
 </project>
