--- a/sling-stanbol-launcher/pom.xml
+++ b/sling-stanbol-launcher/pom.xml
@@ -60,7 +60,7 @@
             </filesets>
           </configuration>
         </plugin>    
-			<plugin>
+		<plugin>
 				<groupId>org.apache.sling</groupId>
 				<artifactId>maven-launchpad-plugin</artifactId>
 				<version>2.1.0</version>
@@ -72,12 +72,16 @@
 						</goals>
 						<configuration>
 							<includeDefaultBundles>true</includeDefaultBundles>
-							<!-- Standalone jar requires an OSGi http service implementation -->
 							<jarWebSupport>
 								<groupId>org.apache.felix</groupId>
 								<artifactId>org.apache.felix.http.jetty</artifactId>
 								<version>2.2.0</version>
 							</jarWebSupport>
+							<defaultBundleList>
+								<groupId>org.apache.sling</groupId>
+								<artifactId>org.apache.sling.launchpad</artifactId>
+								<version>7-SNAPSHOT</version>
+							</defaultBundleList>
 							<bundleExclusions>
 							</bundleExclusions>
 						</configuration>
