--- a/sling-stanbol-ui/pom.xml
+++ b/sling-stanbol-ui/pom.xml
@@ -113,6 +113,12 @@
 			<artifactId>servlet-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>javax.jcr</groupId>
+			<artifactId>jcr</artifactId>
+			<version>2.0</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>jsr311-api</artifactId>
 			<version>1.1.1</version>
@@ -120,17 +126,17 @@
 		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.api</artifactId>
-			<version>2.0.8</version>
+			<version>2.2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.jcr.resource</artifactId>
-			<version>2.0.6</version>
+			<version>2.0.10</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.engine</artifactId>
-			<version>2.0.6</version>
+			<version>2.2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -191,7 +197,13 @@
 	    <dependency>
 	    	<groupId>org.codehaus.jettison</groupId>
 	    	<artifactId>jettison</artifactId>
-	    	<version>1.3</version>
+	    	<version>1.3.1</version>
 	    </dependency>
+		<dependency>
+			<groupId>org.apache.sling</groupId>
+			<artifactId>org.apache.sling.jcr.api</artifactId>
+			<version>2.1.0</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 </project>
