--- a/sling-stanbol-launcher/pom.xml
+++ b/sling-stanbol-launcher/pom.xml
@@ -42,7 +42,7 @@
 	</prerequisites>
 	<build>
 		<plugins>
-		<plugin>
+			<plugin>
 				<groupId>org.apache.sling</groupId>
 				<artifactId>maven-launchpad-plugin</artifactId>
 				<version>2.1.0</version>
@@ -85,111 +85,73 @@
 					</archive>
 				</configuration>
 			</plugin>
+			
 		</plugins>
 	</build>
 	<dependencies>
-
 		<dependency>
-			<!-- maven-launchpad-plugin builds on the launchpad.base app -->
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.launchpad.base</artifactId>
 			<classifier>app</classifier>
+			<version>2.3.1-SNAPSHOT</version>
 		</dependency>
-	
-		<!-- OSGi Framemework Bundle List -->
-		<dependency>
-			<groupId>org.apache.stanbol</groupId>
-			<artifactId>org.apache.stanbol.launchers.bundlelists.osgiframework</artifactId>
-			<type>partialbundlelist</type>
-			<scope>provided</scope>
-		</dependency>
-	
-		<!-- Stanbol Commons Bundle List -->
-		<dependency>
-			<groupId>org.apache.stanbol</groupId>
-			<artifactId>org.apache.stanbol.launchers.bundlelists.stanbolcommons</artifactId>
-			<type>partialbundlelist</type>
-			<scope>provided</scope>
-		</dependency>
-	
-		<!-- Stanbol CMS Adapter Bundle List -->
-		<dependency>
-			<groupId>org.apache.stanbol</groupId>
-			<artifactId>org.apache.stanbol.cmsadapter.bundlelist</artifactId>
-			<type>partialbundlelist</type>
-			<scope>provided</scope>
-		</dependency>
-	
-		<!-- Stanbol Contenthub Bundle List -->
-		<dependency>
-			<groupId>org.apache.stanbol</groupId>
-			<artifactId>org.apache.stanbol.contenthub.bundlelist</artifactId>
-			<type>partialbundlelist</type>
-			<scope>provided</scope>
-		</dependency>
-	
-		<!-- Stanbol Data Bundle List -->
-		<dependency>
-			<groupId>org.apache.stanbol</groupId>
-			<artifactId>org.apache.stanbol.data.bundlelists.defaultdata</artifactId>
-			<type>partialbundlelist</type>
-			<scope>provided</scope>
-		</dependency>
-		<dependency> <!-- include all OpenNLP models in the full launcher -->
-			<groupId>org.apache.stanbol</groupId>
-			<artifactId>org.apache.stanbol.data.bundlelists.opennlp</artifactId>
-			<type>partialbundlelist</type>
-			<scope>provided</scope>
-		</dependency>
-	
-		<!-- Stanbol Enhancer Bundle List -->
-		<dependency>
-			<groupId>org.apache.stanbol</groupId>
-			<artifactId>org.apache.stanbol.enhancer.bundlelist</artifactId>
-			<type>partialbundlelist</type>
-			<scope>provided</scope>
-		</dependency>
-	
-		<!-- Stanbol Entityhub Bundle List -->
-		<dependency>
-			<groupId>org.apache.stanbol</groupId>
-			<artifactId>org.apache.stanbol.entityhub.bundlelist</artifactId>
-			<type>partialbundlelist</type>
-			<scope>provided</scope>
-		</dependency>
-	
-		<!-- Stanbol FactStore Bundle List -->
-		<dependency>
-			<groupId>org.apache.stanbol</groupId>
-			<artifactId>org.apache.stanbol.factstore.bundlelist</artifactId>
-			<type>partialbundlelist</type>
-			<scope>provided</scope>
-		</dependency>
-	
-		<!-- Stanbol Ontology Manager Bundle List -->
-		<dependency>
-			<groupId>org.apache.stanbol</groupId>
-			<artifactId>org.apache.stanbol.ontologymanager.bundlelist</artifactId>
-			<type>partialbundlelist</type>
-			<scope>provided</scope>
-		</dependency>
-	
-		<!-- Stanbol Rules Bundle List -->
-		<dependency>
-			<groupId>org.apache.stanbol</groupId>
-			<artifactId>org.apache.stanbol.rules.bundlelist</artifactId>
-			<type>partialbundlelist</type>
-			<scope>provided</scope>
-		</dependency>
-	
-		<!-- Stanbol Reasoners Bundle List -->
-		<dependency>
-			<groupId>org.apache.stanbol</groupId>
-			<artifactId>org.apache.stanbol.reasoners.bundlelist</artifactId>
-			<type>partialbundlelist</type>
-			<scope>provided</scope>
-		</dependency>
+		
+		    <!-- Stanbol Commons Bundle List -->
+    <dependency>
+      <groupId>org.apache.stanbol</groupId>
+      <artifactId>org.apache.stanbol.launchers.bundlelists.stanbolcommons</artifactId>
+      <type>partialbundlelist</type>
+      <scope>provided</scope>
+    </dependency>
+    
+     <!-- Stanbol CMS Adapter Bundle List -->
+    <!-- <dependency>
+      <groupId>org.apache.stanbol</groupId>
+      <artifactId>org.apache.stanbol.cmsadapter.bundlelist</artifactId>
+      <type>partialbundlelist</type>
+      <scope>provided</scope>
+    </dependency>   -->
 
+    <!-- Stanbol Contenthub Bundle List -->
+    <dependency>
+      <groupId>org.apache.stanbol</groupId>
+      <artifactId>org.apache.stanbol.contenthub.bundlelist</artifactId>
+      <type>partialbundlelist</type>
+      <scope>provided</scope>
+    </dependency>
+
+    <!-- Stanbol Data Bundle List -->
+    <dependency>
+      <groupId>org.apache.stanbol</groupId>
+      <artifactId>org.apache.stanbol.data.bundlelists.defaultdata</artifactId>
+      <type>partialbundlelist</type>
+      <scope>provided</scope>
+    </dependency>
+    <dependency> <!-- include all OpenNLP models in the full launcher -->
+      <groupId>org.apache.stanbol</groupId>
+      <artifactId>org.apache.stanbol.data.bundlelists.opennlp</artifactId>
+      <type>partialbundlelist</type>
+      <scope>provided</scope>
+    </dependency>
+
+    <!-- Stanbol Enhancer Bundle List -->
+    <dependency>
+      <groupId>org.apache.stanbol</groupId>
+      <artifactId>org.apache.stanbol.enhancer.bundlelist</artifactId>
+      <type>partialbundlelist</type>
+      <scope>provided</scope>
+    </dependency>
+
+    <!-- Stanbol Entityhub Bundle List -->
+    <dependency>
+      <groupId>org.apache.stanbol</groupId>
+      <artifactId>org.apache.stanbol.entityhub.bundlelist</artifactId>
+      <type>partialbundlelist</type>
+      <scope>provided</scope>
+    </dependency>
+  
+    
+		
 	</dependencies>
 </project>
 
