--- a/sling-stanbol-launcher/pom.xml
+++ b/sling-stanbol-launcher/pom.xml
@@ -105,12 +105,12 @@
     </dependency>
     
      <!-- Stanbol CMS Adapter Bundle List -->
-    <!-- <dependency>
+    <dependency>
       <groupId>org.apache.stanbol</groupId>
       <artifactId>org.apache.stanbol.cmsadapter.bundlelist</artifactId>
       <type>partialbundlelist</type>
       <scope>provided</scope>
-    </dependency>   -->
+    </dependency>
 
     <!-- Stanbol Contenthub Bundle List -->
     <dependency>
