--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,7 @@
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+--><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -41,8 +39,9 @@
 		<module>sling-stanbol-fragment</module>
 		<module>sling-stanbol-commons</module>
 		<module>sling-stanbol-config</module>
-		<module>sling-stanbol-launcher</module>  
-	</modules>
+		<module>sling-stanbol-launcher</module>
+    <module>create-ria</module>
+  </modules>
 	<build>	
 		<plugins>
 			<plugin>
@@ -74,49 +73,49 @@
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.cmsadapter.bundlelist</artifactId>
-				<version>0.9.0-incubating-SNAPSHOT</version>
+				<version>0.9.0-incubating</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.contenthub.bundlelist</artifactId>
-				<version>0.9.0-incubating-SNAPSHOT</version>
+				<version>0.9.0-incubating</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.data.bundlelist</artifactId>
-				<version>0.9.0-incubating-SNAPSHOT</version>
+				<version>0.9.0-incubating</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.enhancer.bundlelist</artifactId>
-				<version>0.9.0-incubating-SNAPSHOT</version>
+				<version>0.9.0-incubating</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.entityhub.bundlelist</artifactId>
-				<version>0.9.0-incubating-SNAPSHOT</version>
+				<version>0.9.0-incubating</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.ontologymanager.bundlelist</artifactId>
-				<version>0.9.0-incubating-SNAPSHOT</version>
+				<version>0.9.0-incubating</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.rules.bundlelist</artifactId>
-				<version>0.9.0-incubating-SNAPSHOT</version>
+				<version>0.9.0-incubating</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
