--- a/sling-stanbol-commons/pom.xml
+++ b/sling-stanbol-commons/pom.xml
@@ -49,7 +49,7 @@
 		<dependency>
 			<groupId>org.apache.clerezza</groupId>
 			<artifactId>rdf.core</artifactId>
-			<version>0.12-incubating-SNAPSHOT</version>
+			<version>0.12-incubating</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
