--- a/sling-stanbol-ui/pom.xml
+++ b/sling-stanbol-ui/pom.xml
@@ -98,11 +98,36 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+			
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>                   
+                    <execution>
+                        <id>copy-js-deps</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeTypes>js</includeTypes>
+                            <outputDirectory>${project.build.directory}/maven-shared-archive-resources/initial-content/apps/</outputDirectory>
+                        </configuration>
+                    </execution>
+                   
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
 
 	<dependencies>
+	    <dependency>
+	        <groupId>org.wymiwyg</groupId>
+			<artifactId>create-ria</artifactId>
+			<version>0.1-SNAPSHOT</version>
+			<type>js</type>
+	    </dependency>
 		<dependency>
 		    <groupId>org.ccil.cowan.tagsoup</groupId>
 		    <artifactId>tagsoup</artifactId>
@@ -154,17 +179,17 @@
 		<dependency>
 			<groupId>org.apache.stanbol</groupId>
 			<artifactId>org.apache.stanbol.enhancer.servicesapi</artifactId>
-			<version>0.9.0-incubating-SNAPSHOT</version>
+			<version>0.9.0-incubating</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.clerezza</groupId>
 			<artifactId>rdf.core</artifactId>
-			<version>0.12-incubating-SNAPSHOT</version>
+			<version>0.12-incubating</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.clerezza</groupId>
 			<artifactId>rdf.utils</artifactId>
-			<version>0.13-incubating-SNAPSHOT</version>
+			<version>0.13-incubating</version>
 		</dependency>
 		<dependency>
 			<groupId>org.wymiwyg.sling-stanbol</groupId>
@@ -176,22 +201,22 @@
 	    <dependency>
 	      <groupId>org.apache.stanbol</groupId>
 	      <artifactId>org.apache.stanbol.entityhub.servicesapi</artifactId>
-	      <version>0.9.0-incubating-SNAPSHOT</version>
+	      <version>0.9.0-incubating</version>
 	    </dependency>
 	    <dependency>
 	      <groupId>org.apache.stanbol</groupId>
 	      <artifactId>org.apache.stanbol.entityhub.core</artifactId>
-	      <version>0.9.0-incubating-SNAPSHOT</version>
+	      <version>0.9.0-incubating</version>
 	    </dependency>
 	    <dependency>
 	      <groupId>org.apache.stanbol</groupId>
 	      <artifactId>org.apache.stanbol.entityhub.model.clerezza</artifactId>
-	      <version>0.9.0-incubating-SNAPSHOT</version>
+	      <version>0.9.0-incubating</version>
 	    </dependency>
 	    <dependency>
 	      <groupId>org.apache.stanbol</groupId>
 	      <artifactId>org.apache.stanbol.entityhub.query.clerezza</artifactId>
-	      <version>0.9.0-incubating-SNAPSHOT</version>
+	      <version>0.9.0-incubating</version>
 	    </dependency>
 	    
 	    <dependency>
