--- a/create-ria/pom.xml
+++ b/create-ria/pom.xml
@@ -7,7 +7,6 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-	<groupId>org.wymiwyg</groupId>
 	<artifactId>create-ria</artifactId>
 	<version>0.1-SNAPSHOT</version>
 	<name>JavaScript RIA</name>
@@ -41,6 +40,27 @@
 				<version>2.0.0-alpha-1</version>
 			</extension>
 		</extensions>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+				<execution>
+					<id>add-source</id>
+					<phase>generate-sources</phase>
+					<goals>
+					<goal>add-source</goal>
+					</goals>
+					<configuration>
+					<sources>
+						<source>${basedir}/submodules/create/src</source>
+					</sources>
+					</configuration>
+				</execution>
+				</executions>
+			</plugin>
+			</plugins>
 	</build>
 
 	<!-- FIXME: Temporary declaration of Codehaus repos until this moves to Maven Central -->
