--- a/create-ria/pom.xml
+++ b/create-ria/pom.xml
@@ -30,6 +30,18 @@
 			<version>1.8.16-alpha-1</version>
 			<type>js</type>
 		</dependency>
+		<!-- <dependency>
+			<groupId>org.apache.stanbol.js</groupId>
+	<artifactId>jquery-ui</artifactId>
+	<version>1.8.18-SNAPSHOT</version>
+			<type>js</type>
+		</dependency> -->
+		<dependency>
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>createjs</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>js</type>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -41,7 +53,7 @@
 			</extension>
 		</extensions>
 		<plugins>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
 				<version>1.5</version>
@@ -59,7 +71,7 @@
 					</configuration>
 				</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 			</plugins>
 	</build>
 
