--- a/sling-stanbol-jcr-observer/pom.xml
+++ b/sling-stanbol-jcr-observer/pom.xml
@@ -90,27 +90,27 @@
 		<dependency>
 			<groupId>org.apache.stanbol</groupId>
 			<artifactId>org.apache.stanbol.enhancer.servicesapi</artifactId>
-			<version>0.9.0-incubating-SNAPSHOT</version>
+			<version>0.9.0-incubating</version>
 		</dependency>
         <dependency>
           <groupId>org.apache.stanbol</groupId>
           <artifactId>org.apache.stanbol.cmsadapter.servicesapi</artifactId>
-          <version>0.9.0-incubating-SNAPSHOT</version>
+          <version>0.9.0-incubating</version>
         </dependency>
         <dependency>
           <groupId>org.apache.stanbol</groupId>
           <artifactId>org.apache.stanbol.cmsadapter.core</artifactId>
-          <version>0.9.0-incubating-SNAPSHOT</version>
+          <version>0.9.0-incubating</version>
         </dependency>
 		<dependency>
 			<groupId>org.apache.clerezza</groupId>
 			<artifactId>rdf.core</artifactId>
-			<version>0.12-incubating-SNAPSHOT</version>
+			<version>0.12-incubating</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.clerezza</groupId>
 			<artifactId>rdf.utils</artifactId>
-			<version>0.13-incubating-SNAPSHOT</version>
+			<version>0.13-incubating</version>
 		</dependency>
 		<dependency>
 			<groupId>org.wymiwyg.sling-stanbol</groupId>
