--- a/sling-stanbol-launcher/pom.xml
+++ b/sling-stanbol-launcher/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<groupId>org.apache.stanbol</groupId>
     <artifactId>stanbol-parent</artifactId>
-    <version>0.9.0-incubating-SNAPSHOT</version>
+    <version>0.9.0-incubating</version>
 		<!-- <groupId>org.wymiwyg.sling-stanbol</groupId>
 		<artifactId>sling-stanbol</artifactId>
 		<version>1.0-SNAPSHOT</version> -->
