--- a/sling-stanbol-ui/pom.xml
+++ b/sling-stanbol-ui/pom.xml
@@ -123,7 +123,7 @@
 
 	<dependencies>
 	    <dependency>
-	        <groupId>org.wymiwyg</groupId>
+	        <groupId>org.wymiwyg.sling-stanbol</groupId>
 			<artifactId>create-ria</artifactId>
 			<version>0.1-SNAPSHOT</version>
 			<type>js</type>
