--- a/createjs/pom.xml
+++ b/createjs/pom.xml
@@ -20,6 +20,20 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	
+	<dependencies>
+	<!--	<dependency>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>jquery-amd</artifactId>
+			<version>1.7.1-alpha-1</version>
+			<type>js</type>
+		</dependency> -->
+		<dependency>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>jquery-ui-amd</artifactId>
+			<version>1.8.16-alpha-1</version>
+			<type>js</type>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
