--- a/create-ria/pom.xml
+++ b/create-ria/pom.xml
@@ -9,9 +9,9 @@
 
 	<artifactId>create-ria</artifactId>
 	<version>0.1-SNAPSHOT</version>
-	<name>JavaScript RIA</name>
+	<name>Sling JavaScript RIA</name>
 	<packaging>js</packaging>
-	<description>A JavaScript Rich Internet Application using jQuery and jQuery UI.</description>
+	<description>A JavaScript Rich Internet Application using create to edit sling-content.</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -53,6 +53,32 @@
 			</extension>
 		</extensions>
 		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>ianal-maven-plugin</artifactId>
+				<version>1.0-alpha-1</version>
+					<configuration>
+						<skip>true</skip>
+					</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<descriptors>
+						<descriptor>src/main/assembly/src.xml</descriptor>
+					</descriptors>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id> <!-- this is used for inheritance merges -->
+						<phase>package</phase> <!-- bind to the packaging phase -->
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<!-- <plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
@@ -72,7 +98,7 @@
 				</execution>
 				</executions>
 			</plugin> -->
-			</plugins>
+		</plugins>
 	</build>
 
 	<!-- FIXME: Temporary declaration of Codehaus repos until this moves to Maven Central -->
