--- a/sling-stanbol-launcher/pom.xml
+++ b/sling-stanbol-launcher/pom.xml
@@ -93,10 +93,10 @@
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.launchpad.base</artifactId>
 			<classifier>app</classifier>
-			<version>2.3.1-SNAPSHOT</version>
+			<version>2.4.0</version>
 		</dependency>
 		
-		    <!-- Stanbol Commons Bundle List -->
+	<!-- Stanbol Commons Bundle List -->
     <dependency>
       <groupId>org.apache.stanbol</groupId>
       <artifactId>org.apache.stanbol.launchers.bundlelists.stanbolcommons</artifactId>
