--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,17 @@
 --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
+	<!-- <parent>
 		<groupId>org.apache.sling</groupId>
 		<artifactId>sling</artifactId>
-		<version>12</version>
-	</parent>
+		<version>13-SNAPSHOT</version>
+	</parent> -->
+	<parent>
+    <groupId>org.apache.stanbol</groupId>
+    <artifactId>stanbol-parent</artifactId>
+    <version>0.9.0-incubating</version>
+    <relativePath>../../parent</relativePath>
+  </parent>
 	<groupId>org.wymiwyg.sling-stanbol</groupId>
 	<artifactId>sling-stanbol</artifactId>
 	<version>1.0-SNAPSHOT</version>
@@ -66,11 +72,27 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.sling</groupId>
+					<artifactId>maven-launchpad-plugin</artifactId>
+					<version>2.1.0</version>
+					<extensions>true</extensions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 	
 	<dependencyManagement>
 		<dependencies>
-		<!-- Partial bundle list dependencies -->
+			<!-- version used by stanbol 0.9.0 -->
+			<dependency>
+				<groupId>org.codehaus.jettison</groupId>
+				<artifactId>jettison</artifactId>
+				<version>1.3</version>
+			</dependency>
+			<!-- Partial bundle list dependencies -->
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.cmsadapter.bundlelist</artifactId>
