--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<parent>
     <groupId>org.apache.stanbol</groupId>
     <artifactId>stanbol-parent</artifactId>
-    <version>0.9.0-incubating</version>
+    <version>1-incubating</version>
     <relativePath>../../parent</relativePath>
   </parent>
 	<groupId>org.wymiwyg.sling-stanbol</groupId>
@@ -39,6 +39,9 @@
 	</description>
 
 	<modules>
+		<module>stanbol</module>
+		<module>slingrs</module>
+		<module>annotate.js/lib</module>
 		<module>sling-stanbol-ui</module>
 		<module>sling-stanbol-index-page</module>
 		<module>sling-stanbol-jcr-observer</module>
@@ -96,49 +99,49 @@
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.cmsadapter.bundlelist</artifactId>
-				<version>0.9.0-incubating</version>
+				<version>0.10.0-incubating-SNAPSHOT</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.contenthub.bundlelist</artifactId>
-				<version>0.9.0-incubating</version>
+				<version>0.10.0-incubating-SNAPSHOT</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.data.bundlelist</artifactId>
-				<version>0.9.0-incubating</version>
+				<version>0.10.0-incubating-SNAPSHOT</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.enhancer.bundlelist</artifactId>
-				<version>0.9.0-incubating</version>
+				<version>0.10.0-incubating-SNAPSHOT</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.entityhub.bundlelist</artifactId>
-				<version>0.9.0-incubating</version>
+				<version>0.10.0-incubating-SNAPSHOT</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.ontologymanager.bundlelist</artifactId>
-				<version>0.9.0-incubating</version>
+				<version>0.10.0-incubating-SNAPSHOT</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.stanbol</groupId>
 				<artifactId>org.apache.stanbol.rules.bundlelist</artifactId>
-				<version>0.9.0-incubating</version>
+				<version>0.10.0-incubating-SNAPSHOT</version>
 				<type>partialbundlelist</type>
 				<scope>provided</scope>
 			</dependency>
